--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@astrojs/check": "^0.8.2",
     "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
+    "ollama": "^0.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
   }
 }
